<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.pechberti.steve</groupId>
	<artifactId>covid-19</artifactId>
	<version>0.0.3-SNAPSHOT</version>

	<name>JavaFR: Covid-19 DataBase</name>
	<description>
	Retrieve data from:
		- European CDC
		- To Be Continued...
		- Récupérer les données incluant les guéris
		- Récupérer les données depuis des instances temps réelles
		- Implémenter un modèle d'estimation...
	</description>

	<dependencies>
		<dependency>
			<groupId>com.pechberti.steve</groupId>
			<artifactId>outbreak-api</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.11.0.rc1</version>
		</dependency>
		
		<!-- worldfx dependencies -->
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-core</artifactId>
		    <version>11.3.5</version>
		</dependency>
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-javafx</artifactId>
		    <version>11.3.5</version>
		</dependency>
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-materialdesign-pack</artifactId>
		    <version>11.3.5</version>
		</dependency>
    </dependencies>

	<inceptionYear>2020</inceptionYear>

	<licenses>
		<license>
			<name>MPL v2</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>sanke</id>
			<name>Steve PECHBERTI</name>
			<email>steve.pechberti@gmail.com</email>
			<organization>Scientific Researcher</organization>
			<organizationUrl>http://sp-web.fr</organizationUrl>
			<roles>
				<role>Project-Administrator</role>
				<role>Developer</role>
			</roles>
			<timezone>Europe/Paris</timezone>
			<properties>
				<picUrl>http://sp-web.fr/images/favicon.png</picUrl>
			</properties>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/sanke69/outbreak-api.git</url>
		<connection>https://github.com/sanke69/outbreak-api.git</connection>
		<developerConnection>https://github.com/sanke69/outbreak-api.git</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>World Diffusion Repository</name>
			<url>https://github.com/sanke69/outbreak-api.git</url>
		</repository>
		<site>
			<id>site-projet</id>
			<url>https://github.com/sanke69/outbreak-api.git</url>
		</site>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<source>14</source>
							<target>14</target>
							<release>14</release>
							<compilerVersion>14</compilerVersion>
							<compilerArgs>--enable-preview</compilerArgs>
							<forceJavacCompilerUse>true</forceJavacCompilerUse>
							<parameters>true</parameters>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<skip>false</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>